day-4/init-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: init-pod
spec:
  containers:
    - name: c1
      image: nginx:latest
