day-4/livelinesscheck.yaml
apiVersion: v1
kind: Pod
metadata:
  name: livepod
spec:
  containers:
    - name: myapp
      image: nginx
      livenessProbe:
        httpGet:
          path: /index.html
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
