day-4/readinesscheck.yaml
apiVersion: v1
kind: Pod
metadata:
  name: readypod
  labels:
    app: readypod
spec:
  containers:
    - name: myapp
      image: nginx
      livenessProbe:
        httpGet:
          path: /index.html
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
      readinessProbe:
        httpGet:
          path: /index1.html
          port: 80
        initialDelaySeconds: 5
        periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: readyserv
spec:
  type: NodePort
  selector:
    app: readypod
  ports:
    - port: 80
      targetPort: 80
