day-4/ingress-aws.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mying
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /green.html
            pathType: Prefix
            backend:
              service:
                name: green
                port:
                  number: 80
          - path: /yellow.html
            pathType: Prefix
            backend:
              service:
                name: yellow
                port:
                  number: 80
