day-4/network-policy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    app: xyz
spec:
  containers:
    - name: n1
      image: nginx
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: testpodnp
spec:
  podSelector:
    matchLabels:
      app: xyz
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - ipBlock:
            cidr: 0.0.0.0/0
          except:
            - 10.244.0.34
